# GoNN_FR

./: .gitignore  README.md  experiment.py  geometry.py  pyproject.toml  test_geometry.py  tests.py
docs/: GoNN_FR.rst  conf.py  index.rst  modules.rst
src/GoNN_FR/: datasets.py  experiment.py  geometry.py  networks.py  utils.py
tests/: test_geometry.py
